--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
+.current-weather {
+  display: block;
+  margin: 20px auto;
+  padding: 0px;
+  border: none;
+  border-radius: 5px;
+  width: 500px;
+  height: 500px;
+  font-family: sans-serif;
   text-align: center;
+  background-image: url("./background.png");
+  background-repeat: no-repeat;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: red;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer {
+  display: block;
+  text-align: center;
+  margin: 0 auto;
 }
