--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,14 +1,20 @@
 .Weather {
-  border: 1px solid #dadde1;
+  border: none;
   border-radius: 5px;
-  color: #878787;
-  padding: 15px;
+  padding: 15px 15px 0 15px;
   margin: 15px 0 0 0;
 }
 
 .Weather h1 {
-  font-size: 25px;
-  line-height: 30px;
+  font-size: 15px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  text-decoration: underline;
+}
+
+.Weather h2 {
+  font-size: 30px;
   margin: 0;
 }
 
@@ -23,6 +29,10 @@
   list-style: none;
 }
 
-.Weather .icon {
+.Weather .col-6 {
+  text-align: center;
+}
+
+.Weather .temperature {
   margin-top: 20px;
 }
